fixed overflow and image css

--- a/testSite/homevalue/static/homevalue/css/autoaddress.css
+++ b/testSite/homevalue/static/homevalue/css/autoaddress.css
@@ -44,11 +44,10 @@ body {
     margin-left: -50px;
     margin-right: -50px;
     margin-bottom: 50px;
-    overflow: hidden;
 }
 
 
-.bg {
+.background-image{
     background-image: url("../images/clouds-dawn-drone-624929.jpg");
     background-position: center;
     background-repeat: no-repeat;
